[project]
name = "dl-a2t"
version = "0.0.2.3"
description = "Download audio from YouTube and transcribe it"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "diskcache2~=0.1.1",
    "openai-whisper>=20240930",
    "rich>=13.9.4,<14.1.0",
    "typer-slim~=0.15.0",
    "yt-dlp[default]>=2024.11.4,<2025.4.0",
]

[project.scripts]
dl-a2t = "dl_a2t.cli:app"

[tool.ruff]
preview = true
line-length = 200

[tool.ruff.lint]
extend-select = [
    "F",    # flake8
    "I",    # isort
    "N",    # pep8-naming
    "W",    # pycodestyle
    "UP",   # pyupgrade
    "RUF",  # ruff
    "FURB", # refurb
    "C4",   # flake8-comprehensions
    "ARG",  # flake8-unused-arguments
    "PIE",  # flake8-pie
    "PTH",  # flake8-use-pathlib
    "RSE",  # flake8-raise
    "SIM",  # flake8-simplify
    "SLF",  # flake8-self
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.build]
includes = ["src/dl_a2t"]

[tool.uv]
dev-dependencies = [
    "ruff~=0.8.1",
]

[tool.pyright]
typeCheckingMode = "standard"